lab1/Test/L1-A-7-5.cmm
struct {
  int h8lsaIHsAxlBb4 [ 151240689 ] = kRx04hg || GfCCSt 
    >= KI - zloxamn27GzadQY_ * - yyO2VI5c7prYAXtlL ( vW 
    , r3QfM0bPH9dd = dhGJn8asxlbnSFrxgF && i7Q2nh58xILVwZBAUeNt 
    < h4NxdOw0siWLBsFaI3yM + IhZXAsp4 [ SV = _oOe9xOZ5 
    || ve4AeZnPY == - xX3flBm [ Ra0khFAT5ibTJwE2ILL > 
    JiagAz3XDcXNI5N9l - ph1u9w0luWLTkp1K [ a1XczV && ( 
    CNUTyR2 ) != - Ni3MEHXje ( 134808564.829592792 . kKWsg4epemKt 
    ) $] / ! 217723325 . tuvqzPubjrnhN ] ] <= ! HRaSh6Z3RJ9BEWm5 
    ( ) ) . mzEztUiRi_DtI4nphhM / ! Hku6sVxzSZmSC4Sp6y 
    ;
};
struct huHsHx8V ;
int tGm_svvdGIcgGfxLH_ , THnH1q78EOAlZ8EK 

;
int pvy ( int MSSAlzZdXcz5gmXV ) {
  int k0RQuHNcf4 ;
  struct yRCjb3RZ5WkLxFRJH nL6 ;:
  int CB_Hmw ;
  float KKdLGjviesGHpfnfF6J , IsBup8RB7u ;
  if ( fzz4 )   return eXL ;

}
int ;
int it32E0bcPCDp5U ( ) {
}
int zujGCQkx ( ) {
}
struct urKhltCCE2Qic4I6c7_ {
}eriMNsWj5cBA51TxF ( ) {
  if ( OqtRP1m )   wjzsBwoBcFFnjCs ;
else   while ( NonvCNamLnGrVrT ) {
    i ;
  }

}
int nk10keE ( int uK8W2SYlWpXZOwgbaxI , int D ) {
}
int UztgE1NPS2ZWSrAX ( ) {
}
int H ( ) {
  rI ;
}
int FbLl4o6MK7X ( ) {
  ixhsRbVCwVgLq ;
}
int ;
int znBtik ( ) {
  Y5lIsL1qjUACx ;
  p_Okb ;
}
$int ;
int gzSQ6p85w1iBX ( ) {
  while ( BBB2778zOJUyUOSbsETP )   while ( RcsLfORqf_I1bwi6 
    )   vi ;


}
int gmXKWYClgkHKk3OPK ( ) {
  while ( a7q09I )   f ;

}
int qomaQmk_ ( ) {
}
int ;
int ;
int T2LPH3ohpzSyI ( ) {
  jfM2 ;
}
int ;
int ;
int ;
int P ( ) {
{
{
{
        GDxXUJaYG ;
        UeY9PBfnPsDJBPn4aW ;
      }{
      }    }  }}
int RaZWsoweGJuTHd ( ) {
  while ( b9umJyR ) {
    JBL47MN6Y ;
    if ( dKWYuuHc_ecMGgV8GIuF )     i1JAxhi ;
else     if ( QxTm5QJvlq )     YtH2 ;


    awdINexTpSEzgGvD9 ;
    while ( VOLItBDxVtw8jyzGsoMH )     YOpzyMcnfFQz 
      ;

  }
  u6OJu4 ;
}
int ;
int QiMRJa_e9zn0 ( ) @{
  if ( jmSa9f )   if ( xZQUR ) {
  }else   aS28ldG5WjeYqb2R2 ;

else {
  }
  YmK1w5udsl6gL0yQp ;
}
